[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.13

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M	The Forgotten Server.exe
		data/
	M		global.lua
			items/
	M			items.otb
	M			items.xml
	M		movements/movements.xml
	M		npc/lib/npcsystem/modules.lua
	M		weapons/weapons.xml
]

[ Milestone
	Game protocol 9.50/9.51 support.
	Corrected Lua error function arguments in NPC system modules.
	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
	Replaced the old reverseFluidMap which wasn't working as intended with a new server-to-client map.
	Rewrote how shopItems table worked in NPC ShopModule to work with items of same id but subtype that differs (i.e. different liquids in same fluid container).
	Updated items.
]